my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/ESYNTAX_15/ESYNTAX_15.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ESYNTAX_15.dml:11:27: error ESYNTAX: syntax error at '\q\0\a\v\'\e': unrecognised character escape sequence
